--- a/arch/arm64/configs/vayu_user_defconfig
+++ b/arch/arm64/configs/vayu_user_defconfig
@@ -385,6 +385,7 @@ CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_QPNP_FG_GEN4=y
 #CONFIG_SMB1355_SLAVE_CHARGER is not set
+CONFIG_CHARGER_LN8000=y
 CONFIG_BQ2597X_CHARGE_PUMP=y
 CONFIG_QPNP_SMB5=y
 CONFIG_QPNP_QNOVO5=y
